log
Fri Mar 20 01:45:21 AM UTC 2026: 
 tests:  0|5
total_score: 0/70
00299e8
Fri Mar 20 02:19:13 AM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Wimplicit-function-declaration]
   49 |       pushfront(L, elemento);
      |       ^~~~~~~~~
      |       pushFront
df0667d
